# swift-filename-matcher

./: .gitignore  BUILD.bazel  CHANGELOG.md  LICENSE.md  MODULE.bazel  Package.swift  README.md
Sources/FilenameMatcher/: FilenameMatcher.swift  FilenameMatcherOptions.swift
Tests/FilenameMatcherTests/: FilenameMatcherTests.swift
